--- a/style.css
+++ b/style.css
@@ -515,7 +515,7 @@ a {
 .nav_link:hover {
   color: #d9d9d9;
 }
-.button {
+.buttonLogin {
   padding: 6px 24px;
   border: 2px solid #fff;
   background: transparent;
@@ -533,6 +533,9 @@ a {
   background-image: url("/image/heist2020.jpg");
   background-size: cover;
   background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .home::before {
   content: "";
@@ -553,18 +556,21 @@ a {
 /* form */
 .form_container {
   position: absolute;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
   max-width: 320px;
   width: 100%;
-  top: 50%;
+  top: 20%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(10.2s);
-  z-index: 101;
   background: #fff;
   padding: 25px;
   border-radius: 12px;
   box-shadow: rgb(0, 0, 0, 0.1);
-  opacity: 0;
-  pointer-events: none;
+  z-index: 101;
+  /* pointer-events: none; */
+  transform: translate(-50%, -50%) scale(10.2s);
+  opacity: 1;
   transition: all 0.4s ease-out;
 }
 .home.show .form_container {
@@ -575,6 +581,9 @@ a {
 
 .signup_form {
   display: none;
+}
+.signup_form_login {
+  display: block;
 }
 .form_container.active .signup_form {
   display: block;
@@ -672,12 +681,11 @@ a {
   padding: 10px 0;
   border-radius: 10px;
 }
-.login_signup{
+.login_signup {
   font-size: 12px;
   text-align: center;
   margin-top: 15px;
 }
-
 
 
 
