--- a/style.css
+++ b/style.css
@@ -739,3 +739,43 @@ a {
     height: 180%;
   }
 }
+
+
+@media screen and (max-width: 420px) {
+
+  .header3 {
+    position: fixed;
+    height: 80px;
+    width: 100%;
+    background: gray;
+    z-index: 100;
+    padding: 0 20px;
+    top: 0;
+  }
+}
+
+@media screen and (max-width: 420px) {
+
+  .form_container {
+    position: absolute;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    max-width: 320px;
+    width: 100%;
+    top: 20%;
+    left: 10%;
+    background: #fff;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: rgb(0, 0, 0, 0.1);
+    z-index: 101;
+    /* pointer-events: none; */
+    transform: translate(-50%, -50%) scale(10.2s);
+    opacity: 1;
+    transition: all 0.4s ease-out;
+  }
+}
+
+
+
