--- a/style.css
+++ b/style.css
@@ -530,7 +530,7 @@ a {
   position: relative;
   height: 100vh;
   width: 100%;
-  background-image: url("/image/heist2020.jpg");
+  /* background-image: url("/image/heist2020.jpg"); */
   background-size: cover;
   background-position: center;
   display: flex;
