--- a/style.css
+++ b/style.css
@@ -775,7 +775,7 @@ a {
     max-width: 320px;
     width: 100%;
     top: 20%;
-    margin: auto;
+    left: 10%;
     background: #fff;
     padding: 25px;
     border-radius: 12px;
